# qq-trpg-ai-keeper

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
scripts/: sim.py
tests/: conftest.py  test_ai_client_mock.py  test_ai_failure.py  test_check_buffered.py  test_coc7.py  test_commands.py  test_core_handler.py  test_dice.py  test_dice_requests.py  test_dnd5e.py  test_help.py  test_permissions.py  test_skill_alias.py  test_sqlite_store.py  test_turn_manager.py  test_yaml_compat.py
trpg_bot/: character_cards.py  commands.py  config.py  core_handler.py  dice.py  models.py  permissions.py  qq_events.py  simple_yaml.py  turn_manager.py  utils.py  yaml_compat.py
trpg_bot/ai/: client.py  output_parser.py  prompts.py
trpg_bot/memory/: markdown_store.py  retriever.py  schemas.py  sqlite_store.py
trpg_bot/rule_systems/: __init__.py  base.py  coc7.py  custom.py  dnd5e.py
