[project]
name = "qq-trpg-ai-keeper"
version = "0.1.0"
description = "Local-first QQ AI KP/DM bot for tabletop RPG groups"
requires-python = ">=3.11"
dependencies = [
  "nonebot2>=2.3.0",
  "nonebot-adapter-qq>=1.5.0",
  "httpx>=0.27.0",
  "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
